      while notes were playing
    - made it possible to load an instrument even if the audio thread
      isn't running
    - added partial support for the "Controller Triggered" MIDI rule,
      enough for piano gigs with pedal noise samples
    - minor fix: only mark FX sends as being modified if really the
      respective FX send MIDI controller was used

  * LSCP server:
    - added new LSCP event "CHANNEL_MIDI" which can be used by frontends to
      react on MIDI data arriving on certain sampler channels (so far only
      Note-On and Note-Off events are sent via this LSCP event)
    - added new LSCP event "DEVICE_MIDI" which can be used by frontends to
      react on MIDI data arriving on certain MIDI input devices (so far only
      Note-On and Note-Off events are sent via this LSCP event)

Version 0.5.1 (6 December 2007)

  * packaging changes:
    - added autoconf checks for pthread library
    - added autoconf check for pthread bug found on certain NPTL-enabled
      glibc versions (see Gentoo bug report #194076)
    - added autoconf checks for MS Windows

  * general changes:
    - bugfix: the thread used by an editor plugin didn't die when the
      editor closed
    - bugfix: Ringbuffer.h: fill_write_space_with_null() did not zero
      out all the space. operator--() did not apply size_mask after
      decrementing the read_ptr. DEFAULT_WRAP_ELEMENTS set to 0 in
      order to avoid problems with the _NonVolatileReader functions.
    - bugfix: Stream.h: added a missing divide by BytesPerSample in
      GetWriteSpace(). Since this function is currently only used in
      the stream's qsort() compare function, it didn't trigger any
      bugs.
    - Resampler.h, Synthesizer.h: cubic interpolation now works in
      24bit mode too. Faster method to read 24bit words on little
      endian machines (x86): replaced 3 byte reads + shifts with a 1
      unaligned 32bit read and shift
    - experimental support for MS Windows (MIDI input via MME, AUDIO